# exercism-solution

./: .gitignore  README.md  exercism-solution.code-workspace
rust/: Cargo.toml
rust/anagram/.exercism/: metadata.json
rust/anagram/src/: lib.rs
rust/assembly-line/.exercism/: metadata.json
rust/assembly-line/src/: lib.rs
rust/bob/.exercism/: metadata.json
rust/bob/src/: lib.rs
rust/clock/.exercism/: metadata.json
rust/clock/src/: lib.rs
rust/gigasecond/.exercism/: metadata.json
rust/gigasecond/src/: lib.rs
rust/health-statistics/.exercism/: metadata.json
rust/health-statistics/src/: lib.rs
rust/hello-world/.exercism/: metadata.json
rust/leap/.exercism/: metadata.json
rust/leap/src/: lib.rs
rust/low-power-embedded-game/.exercism/: metadata.json
rust/low-power-embedded-game/src/: lib.rs
rust/lucians-luscious-lasagna/.exercism/: metadata.json
rust/lucians-luscious-lasagna/src/: lib.rs
rust/magazine-cutout/.exercism/: metadata.json
rust/magazine-cutout/src/: lib.rs
rust/nth-prime/.exercism/: metadata.json
rust/nth-prime/src/: lib.rs
rust/raindrops/.exercism/: metadata.json
rust/raindrops/src/: lib.rs
rust/resistor-color/.exercism/: metadata.json
rust/resistor-color/src/: lib.rs
rust/reverse-string/: Cargo.toml
rust/reverse-string/.exercism/: metadata.json
rust/reverse-string/src/: lib.rs
rust/role-playing-game/.exercism/: metadata.json
rust/role-playing-game/src/: lib.rs
rust/rpn-calculator/.exercism/: metadata.json
rust/rpn-calculator/src/: lib.rs
rust/semi-structured-logs/.exercism/: metadata.json
(+4 files in other folders)
