[workspace]

members = [
    "hello-world",
    "lucians-luscious-lasagna",
    "assembly-line",
    "semi-structured-logs",
    "resistor-color",
    "health-statistics",
    "low-power-embedded-game",
    "role-playing-game",
    "magazine-cutout",
    "short-fibonacci",
    "rpn-calculator",
    "reverse-string",
    "gigasecond",
    "leap",
    "nth-prime",
    "raindrops",
    "bob",
    "clock",
    "anagram",
]
